@@ -16,6 +16,7 @@
 
 @property (weak) IBOutlet id<EMCCountryDelegate> countryDelegate;
 @property NSLocale *countryNameDisplayLocale;
+@property BOOL showFlags;
 @property BOOL drawFlagBorder;
 @property UIColor *flagBorderColor;
 @property CGFloat flagBorderWidth;
